# CZC

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  Makefile  README.md  fastbuild  filter_coverage.py
.autoqa/: 20251111_raptormini1.md  20251112_codex1.md  20251112_copilot1.md  20251112_kimi1.md  20251113_copilot1.md  20251113_copilot2.md  20251113_copilot3.md  20251113_kimi1.md  20251113_kimi2.md  20251113_kimi3.md  20251114_copilot1.md  20251114_kimi1.md
.prompt/: make_comments.md
benchmarks/: CMakeLists.txt  benchmark_lexer.cpp  benchmark_parser.cpp
cli/: main.cpp
cmd/: main.cpp
czc/ast/: README.md  ast_builder.hpp  ast_node.hpp  ast_visitor.hpp
czc/cst/: cst_builder.hpp  cst_node.hpp  error_collector.hpp
czc/diagnostics/: color.hpp  diagnostic.hpp  diagnostic_code.hpp  diagnostic_reporter.hpp
czc/formatter/: error_collector.hpp  format_options.hpp  format_visitor.hpp  formatter.hpp  formatter_optimized.hpp
czc/lexer/: error_collector.hpp  lexer.hpp  source_location.hpp  source_tracker.hpp  token.hpp  utf8_handler.hpp
czc/parser/: error_collector.hpp  parser.hpp
czc/token_preprocessor/: error_collector.hpp  token_preprocessor.hpp
czc/utils/: color.hpp  error_collector.hpp  file_collector.hpp  module_error_collector.hpp  source_location.hpp  source_tracker.hpp
examples/: char_and_strs.zero  cst_builder_example.cpp  escape_sequences.zero  numbers.zero  strs.zero  test_bad_exponent.zero  test_comments.zero  test_else_if.zero  test_emoji_compare.zero  test_escape_utf8.zero  test_function.zero  test_hex_escape.zero  test_minus.zero  test_multiline.zero  test_multiline_raw.zero  test_raw_string.zero  test_scientific.zero  test_scientific_improved.zero  test_string_features.zero  test_struct.zero  test_u8_identifiers_comprehensive.zero  test_unicode.zero  test_unterminated.zero  test_utf8_positions.zero
include/czc/lexer/: lexer.hpp  lexer_error.hpp  token.hpp
include/czc/token_preprocessor/: token_preprocessor.hpp
lexer/: lexer.cpp  lexer.hpp  lexer_error.cpp  lexer_error.hpp  mod.cpp  token.cpp  token.hpp
locales/: README.md
locales/en_US/: diagnostics.toml
locales/ne_KO/: diagnostics.toml
locales/zh_CN/: diagnostics.toml
src/ast/: ast_builder.cpp  ast_visitor.cpp
src/cst/: cst_node.cpp  error_collector.cpp
src/diagnostics/: diagnostic.cpp  diagnostic_code.cpp
src/formatter/: error_collector.cpp  formatter.cpp  formatter_decl.cpp  formatter_expr.cpp  formatter_stmt.cpp  formatter_type.cpp
src/lexer/: error_collector.cpp  lexer.cpp  lexer_error.cpp  lexer_number.cpp  lexer_operators.cpp  lexer_string.cpp  source_tracker.cpp  token.cpp  utf8_handler.cpp
src/parser/: error_collector.cpp  parser.cpp  parser.cpp.backup  parser_decl.cpp  parser_expr.cpp  parser_stmt.cpp  parser_type.cpp
src/token_preprocessor/: error_collector.cpp  token_preprocessor.cpp
src/utils/: file_collector.cpp  source_tracker.cpp
tests/: CMakeLists.txt  debug_operators.cpp  test_array_types.cpp  test_ast.cpp  test_ast_coverage.cpp  test_comments.cpp  test_cst.cpp  test_cst_edge_cases.cpp  test_else_if.cpp  test_error_recovery.cpp  test_formatter.cpp  test_function_literals.cpp  test_helpers.hpp  test_lexer.cpp  test_lexer_gtest.cpp  test_parser.cpp  test_source_tracker_performance.cpp  test_struct_type_alias.cpp  test_synthetic_tokens.cpp  test_token_preprocessor.cpp  test_tuple_types.cpp  test_utf8_edge_cases.cpp
